# arrow_pointing_dataset

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
notebooks/: visual_inspection.ipynb
src/arrow_pointing_dataset/: __init__.py  arrow_pointing_dataset.py  arrow_pointing_dataset_batched.py  grain_dataset.py  tensorflow_dataset.py  torch_dataset.py  torch_dataset_batched.py
tests/: test_arrow_pointing_dataset.py  test_arrow_pointing_dataset_batched.py  test_framework_datasets.py  test_grain_dataset.py  test_torch_dataset_batched.py
